# mosh-tcp

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  build_release.sh  deps.md  walkthrough.md
.github/workflows/: ci.yml  release.yml
.kiro/skills/release-process/: SKILL.md
clients/c/: Makefile  mosh_tcp_client.c  puff.c  puff.h
clients/cpp/: Makefile  mosh_tcp_client.cpp
doc/: architecture.md
plan/2020720_01/: prompt.txt  walkthrough.md
plan/20260721_01/: 01_architectural_refactoring_plan.md  02_walkthrough_refactoring_and_client_split.md  03_binary_size_deep_dive_report.md  04_walkthrough_zero_tokio_client_and_release_pipeline.md  binary_size_deep_dive.md  walkthrough.md
plan/20260721_02/: 01_initial_investigation_c_cpp_clients.md  02_implementation_and_testing_plan_c_cpp_clients.md  03_walkthrough.md
plan/20260723_01/: 01_implementation_plan_ssh_streamlined_login.md  02_walkthrough.md  03_dynamic_port_reconnect_plan.md  03_walkthrough_dynamic_ports_reconnect.md  prompt.txt
plan/20260723_02_btop_not_working/: btop-weird.txt  plan.md  prompt.txt  walkthrough.md
scripts/: release-check.sh  release.sh
src/: ansi.rs  client.rs  lib.rs  main.rs  predictive.rs  protocol.rs  server.rs
tests/: integration.rs  integration_matrix.rs  mock_ssh.sh  test_browsh.rs  test_btop_emacs.rs  test_c_client.rs  test_cpp_client.rs  test_predictive.rs  test_rate_limit.rs  test_ssh_login.rs  test_tmux.rs  test_vt100_resize.rs
