[package]
name = "mosh-tcp"
version = "0.2.2"
edition = "2024"

[lib]
name = "mosh_tcp"
path = "src/lib.rs"

[[bin]]
name = "mosh-tcp"
path = "src/main.rs"

[[bin]]
name = "mosh-tcp-client"
path = "src/bin/mosh_tcp_client.rs"
required-features = ["client"]

[[bin]]
name = "mosh-tcp-server"
path = "src/bin/mosh_tcp_server.rs"
required-features = ["server"]

[features]
default = ["client", "server"]
client = []
server = ["dep:portable-pty"]

[dependencies]
tokio = { version = "1.53", features = ["net", "rt-multi-thread", "time", "macros", "io-util", "sync"] }
portable-pty = { version = "0.9", optional = true }
crossterm = "0.29"
flate2 = "1.1"
bytes = "1.12"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
anyhow = "1.0"
vt100 = "0.15.2"

[dev-dependencies]
tokio = { version = "1.53", features = ["process", "io-util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
