[package]
name = "mosh-tcp"
version = "0.6.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/plops/mosh-tcp"


[lib]
name = "mosh_tcp"
path = "src/lib.rs"

[[bin]]
name = "mosh-tcp-client"
path = "src/bin/mosh_tcp_client.rs"
required-features = ["client"]

[[bin]]
name = "mosh-tcp-server"
path = "src/bin/mosh_tcp_server.rs"
required-features = ["server"]

[features]
default = ["client", "server"]
client = []
server = ["dep:portable-pty", "dep:tokio", "dep:tokio-util", "dep:bytes", "dep:futures"]

[dependencies]
crossterm = "0.29"
flate2 = "1.1"
anyhow = "1.0"
vt100 = "0.15.2"

# Server-only dependencies
tokio = { version = "1.53", features = ["net", "rt-multi-thread", "time", "macros", "io-util", "sync"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
bytes = { version = "1.12", optional = true }
portable-pty = { version = "0.9", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.53", features = ["process", "io-util", "net", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.12"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
